# FFmpegDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jimi/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jimi/ffmpegdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jimi/ffmpegdemo/: ExampleUnitTest.java
ffmpeglibrary/: CMakeLists.txt  build.gradle
ffmpeglibrary/libs/armeabi-v7a/include/: config.h
ffmpeglibrary/libs/armeabi-v7a/include/libavdevice/: alldevices.d  fbdev_dec.d  lavfi.d  libavdevice.pc  libavdevice.version  oss_dec.d  oss_enc.d  v4l2-common.d  v4l2.d  v4l2enc.d
ffmpeglibrary/libs/armeabi-v7a/include/libavutil/: ffversion.h  internal.h  timer.h
ffmpeglibrary/src/androidTest/java/com/jimi/ffmpeglibrary/: ExampleInstrumentedTest.java
ffmpeglibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/src/main/cpp/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  ffmpeg_thread.h
ffmpeglibrary/src/main/java/com/jimi/ffmpeglibrary/: FFmpegCmd.java  FFmpegUtil.java  FFmpegUtils.java  ThreadPool2.java  ThreadPoolUtil.java  ThreadPoolUtildd.kt
ffmpeglibrary/src/test/java/com/jimi/ffmpeglibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
